<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">FileSender</string>
    <string name="select_folder">Select the folder!</string>
    <string name="ok">ok</string>
    <string name="content_descr">img</string>
    <string name="empty_list">No Files in here. Strange!</string>
    <string name="cancel">cancel</string>
    <string name="paths">Paths</string>
    <string name="empty">empty</string>
    <string name="current_activity">Current Service activity</string>
	<string name="server">Server</string>
	<string name="ip_dns">ip/dns</string>
	<string name="five_sec">5 Sekunden</string>
	<string name="so_timeout">Socket Timeout</string>
	<string name="password">Password</string>
	<string name="scan_period">Scan period</string>
	<string name="give_timeinterval">Give a time interval</string>
	<string name="give_ip_port">Give ip/dns and port</string>
</resources>