<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stas="http://schemas.android.com/apk/res/de.stas"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top">
	<ImageView
	    android:id="@+id/header_imgView"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:src="@drawable/greengradient"
	    android:scaleType="fitXY"
	    android:contentDescription="@string/content_descr"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/select_folder"
        android:layout_alignParentLeft="true"
        android:textColor="@color/white"/>"
	<de.stas.views.ColorButton
		android:id="@+id/header_ok_button"
		android:layout_width="wrap_content"
		android:minWidth="50dp"
		android:layout_height="wrap_content"
		android:alpha="0.6"
		android:text="@string/ok"
		android:layout_alignParentRight="true"
		stas:color="@color/green"
		stas:percent="20"/>
	<ListView
		android:id="@android:id/list"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@+id/header_imgView"/>
	<TextView 
	    android:id="@id/android:empty"
   		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
</RelativeLayout>