<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
       	<ImageView 
    		android:id="@+id/dialog_imgView"
    		android:layout_width="0px"
    		android:layout_height="70dp"
    		android:layout_weight=".5"
    		android:contentDescription="@string/content_descr"/>
    	<TextView android:id="@+id/dialog_textView"
	         android:layout_width="0px"
	         android:layout_height="wrap_content"
	         android:layout_weight="1"
	         android:layout_gravity="center"
	         android:layout_marginLeft="20dp"
	         android:textColor="#FFF"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">
	    <Button
	        android:id="@+id/confirm_ok_dialog_button"
	        android:text="@string/ok"
	        android:layout_height="wrap_content"
	        android:layout_width="0px"
	        android:layout_weight="1"/>
	    <Button
	        android:id="@+id/confirm_cancel_dialog_button"
	        android:text="@string/cancel"
	        android:layout_height="wrap_content"
	        android:layout_width="0px"
	        android:layout_weight="1"
	        android:layout_marginLeft="-7dp"/>
    </LinearLayout>
</LinearLayout>